--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -2,12 +2,12 @@ before:
   hooks:
     - go mod download
 builds:
-  env:
-    - CGO_ENABLED=0
-  goos:
-    - windows
-    - linux
-    - darwin
+  - env:
+      - CGO_ENABLED=0
+    goos:
+      - windows
+      - linux
+      - darwin
 archive:
   replacements:
     darwin: Darwin
