--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,31 @@
 version: 2
 jobs:
+  build:
+    docker:
+      - image: circleci/golang:1.11
+        environment:
+          - GO111MODULE: "on"
+    steps:
+      - checkout
+
+      - restore_cache:
+          keys:
+            - gomod-{{ checksum "go.mod" }}
+      - run: go mod download
+      - save_cache:
+          key: gomod-{{ checksum "go.mod" }}
+          when: always
+          paths:
+            - /go/pkg/mod/cache
+
+      - run:
+          name: build
+          when: always
+          command: |
+            mkdir -p /tmp/artifacts
+            go build -o /tmp/artifacts/GhWebhookToMQTT
+      - store_artifacts:
+          path: /tmp/artifacts
   release:
     docker:
       - image: circleci/golang:1.11
@@ -11,6 +37,9 @@ jobs:
 
 workflows:
   version: 2
+  build:
+    jobs:
+      - build
   release:
     jobs:
       - release:
